feat: update network type
Closes #581
